--- a/templates/participants/register.html.twig
+++ b/templates/participants/register.html.twig
@@ -3,6 +3,11 @@
 
 {% block body %}
 <div style="max-width: 60%; margin: 0 auto; position: relative; top: 5em">
+    <form action="register" method="post" enctype="multipart/form-data">
+        <input type="file" name="file">
+        <button class="btn btn-primary" type="submit" name="import">Import</button>
+    </form>
+
     {{  form_start(registerForm) }}
 
     {{ form_widget(registerForm) }}
