--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,7 +54,7 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="{{ path('lieux') }}">Liste des Lieux</a>
-                        {% if app.user is not null %}
+                        {% if is_granted("ROLE_ADMIN") %}
                         <a class="dropdown-item" href="{{ path('creerLieu') }}">Créer un lieu</a>
                         {% endif %}
                     </div>
